# py-tic-tac-toe

./: .deepsource.toml  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Pipfile  README.md  SECURITY.md  TicTacToeGameController.py  TicTacToeModel.py  index.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: frogbot-scan-pr-pip.yml  ossar-analysis.yml  python-app.yml
.jfrog/projects/: build.yaml  docker.yaml  poetry.yaml
.run/: tic_tac_toe_game_controller.run.xml  tic_tac_toe_game_controller_flask.run.xml  tic_tac_toe_game_controller_kivy.run.xml
docker/: Dockerfile
docker/flask/: entrypoint.sh
src/tictactoe/ascii/: main.py  tic_tac_toe_game_controller.py
src/tictactoe/flask/: main.py  tic_tac_toe_game_controller.py  tic_tac_toe_game_controller_flask.py
src/tictactoe/flask/templates/: tic_tac_toe_flask_view.html
src/tictactoe/kivy/: main.py  tic_tac_toe_game_controller.py  tic_tac_toe_game_controller_kivy.py  tic_tac_toe_kivy_view.py  tictactoekivyview.kv
src/tictactoe/templates/: tic_tac_toe_flask_view.html
tests/: test_tic_tac_toe_model.py
tests/features/model/: create_game_model.feature
tests/step_defs/: test_game_model.py
tictactoe/: TicTacToeCLIView.py  tic_tac_toe_cli_view.py  tic_tac_toe_game_controller.py  tic_tac_toe_game_controller_kivy.py  tic_tac_toe_kivy_view.py  tic_tac_toe_model.py
tictactoe/ascii/: main.py  tic_tac_toe_cli_view.py  tic_tac_toe_game_controller.py
tictactoe/flask/: main.py  tic_tac_toe_game_controller.py  tic_tac_toe_game_controller_flask.py
tictactoe/flask/templates/: tic_tac_toe_flask_view.html
tictactoe/kivy/: main.py  mainview.kv  tic_tac_toe_game_controller.py  tic_tac_toe_game_controller_kivy.py  tic_tac_toe_kivy_view.py  tictactoekivyview.kv
tictactoe/model/: tic_tac_toe_model.py
tictactoe/tests/: test_tic_tac_toe_model.py
