[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tictactoe"
version = "0.0.1"
description = "A tic-tac-toe game written in python with different user interfaces all using the same datamodel."
authors = [
    "Jörg Sesterhenn <mail@me.not>"
]
license = "MIT"
readme = "README.md"
include = [
    { path = "tests", format = "sdist" }
]
repository = "https://github.com/joergsesterhenn/py-tic-tac-toe/"
keywords = ["tictactoe", "kivy", "flask", "ascii"]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Framework :: Flask",
  "Operating System :: OS Independent",
  "Programming Language :: Python"
]

[tool.poetry.build]
generate-setup-file = false

# Requirements
[tool.poetry.dependencies]
python = "^3.9"
flask = "2.3.1"
kivy = "2.1.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "6.0.0"
pytest = "^7.2"
pytest-bdd = "^6.1.1"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
pytest-flask = "^1.2.0"

[tool.poetry.scripts]
ascii = "tictactoe.ascii.main:run"
kivy = "tictactoe.kivy.main:run"
flask = "tictactoe.flask.main:run"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/joergsesterhenn/py-tic-tac-toe/issues"

[[tool.poetry.source]]
name = "jfrog"
url = "https://joerg.sesterhenn@gmail.com:AKCp8nGu6oT5U11sZFNhpGeoxxVSGtCLirw33VaNzbBj7mYtFbjGPN7q1XuQYvyn97a8CVJp5@joergsesterhenn.jfrog.io/artifactory/api/pypi/default-pypi/simple"
default = true
secondary = false
